tests/ui/compile-fail-1.stderr
error: ERROR
 --> $DIR/compile-fail-1.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^^
